# fibonacci_wasm

./: Cargo.toml  index.html  readme.md
pkg/: fibonacci_wasm.js  fibonacci_wasm_bg.wasm
src/: lib.rs
