[package]
name = "fibonacci-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
# console_error_panic_hook = "0.1"
# serde={version = "1.0", features = ["derive"]}
js-sys = "0.3.6"
# serde-wasm-bindgen = "0.4.5"
# wasm-bindgen-webidl = "0.2.75"
wasm-bindgen-macro = "0.2.83"
wasm-bindgen-macro-support = "0.2.83"
# wasm-bindgen-backend = "0.2.83"
# wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.6", features = [
  "console",
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'HtmlButtonElement',
  'HtmlInputElement'
] }

# [dev-dependencies]
# wasm-bindgen-test = "0.3.33"
